[package]
name = "kbdi"
version = "0.4.2"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
publish = false

[features]
legacy = []

[[bin]]
name = "kbdi-legacy"
required-features = ["legacy"]
doc = false
path = "src/bin/kbdi_legacy.rs"

[[bin]]
name = "kbdi"
required-features = []
doc = false
path = "src/bin/kbdi.rs"

[dependencies]
libloading = { git = "https://github.com/nagisa/rust_libloading" }
lazy_static = "*"

[dependencies.winapi]
git = "https://github.com/bbqsrc/winapi-rs"
branch = "move-kernel32-nls-funcs"
features = ["everything"]

[dependencies.winreg]
version = "0.4"
default-features = false
features = []

[dependencies.clap]
version = "2.24.1"
default-features = false
features = []

[build-dependencies]
embed-resource = "1.1"

[profile.release]
lto = true
panic = "abort"
debug = true
