[package]
name = "kbdi"
version = "0.5.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "Apache-2.0 OR MIT"
publish = false
edition = "2018"

[features]
legacy = []

[[bin]]
name = "kbdi-legacy"
required-features = ["legacy"]
doc = false
path = "src/bin/kbdi_legacy.rs"

[[bin]]
name = "kbdi"
required-features = []
doc = false
path = "src/bin/kbdi.rs"

[dependencies]
log = "*"
env_logger = "0.8.1"
libloading = "0.5.0"
lazy_static = "1.2.0"
sentry = "0.12.0"
winapi = { version = "0.3", features = ["everything"] }
registry = {git = "https://github.com/bbqsrc/registry-rs",  branch="main"}
pathos = "0.3.0-pre.1"
fern = "0.6.0"
whoami = "0.9.0"
thiserror = "1.0.21"
chrono = "0.4.19"

[dependencies.structopt]
version = "0.3.0"
default-features = false
features = []

[build-dependencies]
embed-resource = "1.1"

[profile.release]
lto = true
debug = true
